# corebehrt_phair

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_remote.py
.github/workflows/: format.yml  lint.yml  pipeline.yml  pylance.yml  unittest.yml
ehr2vec/: main_fi_perturbation.py
ehr2vec/azure_run/: __init__.py
ehr2vec/binary_tmle/: estimators.py  pipelines.py  simulate_data.py  vis.py
ehr2vec/common/: azure.py  checks.py  cli.py  config.py  default_args.py  initialize.py  io.py  loader.py  logger.py  saver.py  setup.py  utils.py  wandb.py
ehr2vec/configs/: create_data_example.yaml  feature_importance_perturb_example.yaml  finetune_example.yaml  finetune_simulated_example.yaml  outcomes_example.yaml  predict_counterfactual_example.yaml  pretrain_example.yaml  simulate_binary_outcome.yaml
ehr2vec/data/: batch.py  concept_loader.py  creators.py  dataset.py  featuremaker.py  filter.py  lab_creators.py  lab_featuremaker.py  mask.py  prepare_data.py  split.py  tokenizer.py  utils.py
ehr2vec/data_fixes/: censor.py  exclude.py  handle.py  infer.py  truncate.py
ehr2vec/dataloader/: collate_fn.py
ehr2vec/dev/: shap_deep_minimal_example.py  shap_minimal_example.py
ehr2vec/double_robust/: counterfactual.py  save.py
ehr2vec/downstream_tasks/: outcomes.py
ehr2vec/effect_estimation/: counterfactual.py  data.py  utils.py
ehr2vec/embeddings/: ehr.py  time2vec.py
ehr2vec/evaluation/: calibration.py  encodings.py  metrics.py  poolings.py  stats.py  utils.py  vis.py  visualization.py
ehr2vec/feature_importance/: perturb.py  perturb_utils.py  shap.py  (+2 more)
(+95 files in other folders)
